# 24-1-time-tracker

./: CMakeLists.txt  README.md
include/: functions.h  task.h
src/: CMakeLists.txt  functions.cpp  main.cpp  task.cpp
